models built and relationships setup

--- a/common/models/app-user.json
+++ b/common/models/app-user.json
@@ -9,13 +9,18 @@
   "properties": {},
   "validations": [],
   "relations": {
-    "places":{
-      "type" : "hasMany",
-      "model" : "Place", 
-      "foreignKey" : "UserId", 
-      "through" : "Vote" 
-    }
+    "places": {
+      "type": "hasMany",
+      "model": "Place",
+      "foreignKey": "UserId",
+      "through": "Vote"
     },
+    "votes": {
+      "type": "hasMany",
+      "model": "Vote",
+      "foreignKey": "UserId"
+    }
+  },
   "acls": [],
   "methods": {}
 }
