--- a/package.json
+++ b/package.json
@@ -7,13 +7,24 @@
     "pretest": "jshint ."
   },
   "dependencies": {
+    "body-parser": "^1.9.0",
     "compression": "^1.0.3",
+    "connect-ensure-login": "^0.1.1",
+    "cookie-parser": "^1.3.2",
     "cors": "^2.5.2",
+    "errorhandler": "^1.1.1",
+    "express-flash": "0.0.2",
+    "express-session": "^1.7.6",
+    "jade": "^1.7.0",
     "loopback": "^2.22.0",
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^2.1.0",
     "loopback-connector-postgresql": "^2.4.0",
     "loopback-datasource-juggler": "^2.39.0",
+    "loopback-component-passport": "^1.5.0",
+    "passport": "^0.3.2",
+    "passport-facebook": "^1.0.3",
+    "passport-oauth2": "^1.1.2",
     "serve-favicon": "^2.0.1"
   },
   "devDependencies": {
